--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   color: #404bbf;
 }
 .logo {
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
@@ -56,6 +57,7 @@ h1 {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  cursor: pointer;
 }
 .order:hover {
   background: #404bbf;
